retrieve, parse and display items from reddit/android)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">RedditReader</string>
+    <string name="app_name">RedditReaderDev</string>
+    <string name="refresh">Atualizar</string>
 </resources>
